--- a/src/app/headerbar/headerbar.component.html
+++ b/src/app/headerbar/headerbar.component.html
@@ -2,6 +2,10 @@
   <ng-content select="[title]"></ng-content>
   <span class="toolbar-spacer"></span>
   
+  <button md-icon-button [routerLink]="['/home']">
+    <md-icon>home</md-icon>  
+  </button>
+
   <button md-icon-button [mdMenuTriggerFor]="menu">
       <md-icon>more_vert</md-icon>
     </button>
