TODO: landing page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,20 @@
-<p>
-  home works!
-</p>
+<headerbar>
+  <span title>Case Templates</span>
+</headerbar>
+<br>
+<div fxLayout="column">
+  <div fxLayout="row" fxLayoutAlign="center">
+    <h1 class="mat-display-2">Welcome</h1>
+  </div>
+  <div fxLayout="column" fxFlex="50%" fxLayoutAlign="center">
+    <!-- TODO: landing page -->
+      <!-- <p>This website was created to assist the professionals in the creation of cases.</p>
+
+      <p>On the left are all the case templates that are currently mandatory to be used for cases or when responding in the High Speed email account</p> -->
+    </div> 
+  </div>
+  <div fxLayout="row">
+    
+</div>
+
+
