Added contact list component and worked as a dialog

--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  contact-list works!
-</p>
+<div>
+    <h2 md-dialog-title>MY DIALOG</h2>
+
+    <p>dsadafffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</p>
+</div>>
