--- a/src/app/headerbar/headerbar.component.html
+++ b/src/app/headerbar/headerbar.component.html
@@ -18,7 +18,7 @@
         <md-icon>place</md-icon>
         <span>Surepay Map</span>
       </button>
-      <button md-menu-item disabled>
+      <button md-menu-item (click)="openDialog()">
         <md-icon>account_circle</md-icon>
         <span>Contact List</span>
       </button>
