--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -88,6 +88,26 @@
     <md-expansion-panel>
         <md-expansion-panel-header>
           <md-panel-title>
+            Human Resources
+          </md-panel-title>
+          <md-panel-description>
+            <hr>
+          <md-icon>people</md-icon>
+          </md-panel-description>
+        </md-expansion-panel-header>
+        <md-list>
+          <md-list-item *ngFor="let person of hr">
+            <md-icon md-list-icon>people</md-icon>
+            <h4 md-line>{{person.employeeName}}</h4>
+            <p md-line>{{person.position}}</p>
+            <p md-line>Extension: {{person.extension}}</p>
+          </md-list-item>
+        </md-list>
+      </md-expansion-panel>
+
+    <md-expansion-panel>
+        <md-expansion-panel-header>
+          <md-panel-title>
             I.T
           </md-panel-title>
           <md-panel-description>
